--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 
 services:
   restapi:
-    image: rest-api
+    image: rest-api:latest
     restart: always
     container_name: rest-api
     ports:
