Added clean up.

--- a/.gitignore
+++ b/.gitignore
@@ -146,4 +146,8 @@ gradle-app.setting
 **/build/
 
 # End of https://www.gitignore.io/api/java,gradle,intellij,sonarqube
-/
+
+.settings/
+.project
+bin/
+.classpath
