--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,4 @@ spring.datasource.username=standard
 spring.datasource.password=password
 
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+google.recaptcha.token=$GOOGLE_RECAPTCHA_TOKEN
