--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,14 @@ plugins {
     id 'java'
     id 'com.github.sherter.google-java-format' version '0.8'
     id 'jacoco'
-    id 'org.sonarqube' version '2.7'
+//    id 'org.sonarqube' version '2.7'
     id 'application'
 //    id "org.jlleitschuh.gradle.ktlint"
 }
 
 group = 'com.lukeshay'
 version = '0.1.0'
-sourceCompatibility = '1.8'
+sourceCompatibility = '11'
 mainClassName = 'com.lukeshay.restapi.RestApiApplication'
 
 ext {
