--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,7 @@ systemProp.sonar.login=<token>
 systemProp.sonar.jacoco.reportPaths=build/reports/jacoco/test
 systemProp.sonar.groovy.jacoco.reportPaths=build/reports/jacoco/test
 systemProp.sonar.projectName=rest-api
+
+org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.parallel=true
