--- a/deploy/docker-compose.dev.yml
+++ b/deploy/docker-compose.dev.yml
@@ -14,6 +14,9 @@ services:
       - ACCESS_KEY=$ACCESS_KEY
       - SECRET_KEY=$SECRET_KEY
       - GOOGLE_RECAPTCHA_TOKEN=$GOOGLE_RECAPTCHA_TOKEN
+      - DB_URL=jdbc:postgresql://localhost:5432/routerating
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=password
     depends_on:
       - sqldb
     links:
@@ -23,7 +26,7 @@ services:
     image: postgres
     container_name: rest-api-postgres
     environment:
-      POSTGRES_USER: standard
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: routerating
     volumes:
