--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,6 @@ plugins {
     id 'java'
     id 'com.github.sherter.google-java-format' version '0.8'
     id 'jacoco'
-//    id 'org.sonarqube' version '2.7'
     id 'application'
 //    id "org.jlleitschuh.gradle.ktlint"
 }
@@ -144,3 +143,4 @@ compileTestJava {
 }
 
 check.dependsOn jacocoTestReport
+jacocoTestCoverageVerification.dependsOn test
