--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -13,9 +13,9 @@ ENTRYPOINT java -Djava.security.egd=file:/dev/./urandom \
   -Dspring.datasource.url=$DB_URL \
   -Dspring.datasource.username=$DB_USERNAME \
   -Dspring.datasource.password=$DB_PASSWORD \
-  -DJWT_SECRET=$JWT_SECRET \
-  -DREFRESH_SECRET=$REFRESH_SECRET \
-  -DACCESS_KEY=$ACCESS_KEY \
-  -DSECRET_KEY=$SECRET_KEY \
-  -DGOOGLE_RECAPTCHA_TOKEN=$GOOGLE_RECAPTCHA_TOKEN \
+  -Dsecurity.token.jwt=$JWT_SECRET \
+  -Dsecurity.token.refresh=$REFRESH_SECRET \
+  -Ddo.key.access=$ACCESS_KEY \
+  -Ddo.key.secret=$SECRET_KEY \
+  -Dgoogle.recaptcha.token=$GOOGLE_RECAPTCHA_TOKEN \
   -jar rest-api.jar || exit 1
