--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -47,6 +47,7 @@ jobs:
     env:
       DOCKER_REPO: lukeshaydocker/route-rating-rest-api
       SHA: ${GITHUB_SHA::7}
+      BRANCH: ${GITHUB_REF:11:}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -58,4 +59,5 @@ jobs:
       - run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
       - run: docker build -t ${{ env.DOCKER_REPO }}:${{ env.SHA }} -t ${{ env.DOCKER_REPO }}:latest .
       - run: docker push ${{ env.DOCKER_REPO }}:${{ env.SHA }}
+      - run: test ${{ env.BRANCH }} = "master" && docker push ${{ env.DOCKER_REPO }}:latest || exit 0
 
