--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -41,7 +41,7 @@ jobs:
     env:
       DOCKER_REPO: lukeshaydocker/route-rating-rest-api
       SHA: ${GITHUB_SHA::7}
-      BRANCH: ${GITHUB_REF:11:}
+      BRANCH: ${GITHUB_REF}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -51,7 +51,7 @@ jobs:
           architecture: x64 # (x64 or x86) - defaults to x64
       - run: ./scripts/build.sh
       - run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
-      - run: docker build -t ${{ env.DOCKER_REPO }}:${{ env.SHA }} -t ${{ env.DOCKER_REPO }}:latest .
+      - run: docker build -t ${{ env.DOCKER_REPO }}:${{ env.SHA }} -t ${{ env.DOCKER_REPO }}:latest -f deploy/Dockerfile .
       - run: docker push ${{ env.DOCKER_REPO }}:${{ env.SHA }}
-      - run: test ${{ env.BRANCH }} = "master" && docker push ${{ env.DOCKER_REPO }}:latest || exit 0
+      - run: test `echo ${{ env.BRANCH }} | grep "master"` && docker push ${{ env.DOCKER_REPO }}:latest || exit 0
 
