--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -40,22 +40,7 @@ jobs:
       - uses: warchant/setup-sonar-scanner@v1
         with:
           version: 4.3.0.2102
-      - run: ./gradlew build
-      - run: sonar-scanner \
-          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-          -Dsonar.branch.name=${{ env.BRANCH }} \
-          -Dsonar.projectKey=${{ env.PROJECT_KEY }} \
-          -Dsonar.projectVersion=${{ env.SHA }} \
-          -Dsonar.organization=luke-shay \
-          -Dsonar.host.url=https://sonarcloud.io \
-          -Dsonar.sources=src/main/java/ \
-          -Dsonar.exclusions=**/*Repository.class,**/*Repository.java,**/*Body.class,**/*Body.java,**/*View.class,**/*View.java,**/*Payload.class,**/*Payload.java,**/*Filter.class,**/*Filter.java,**/*Exception.class,**/*Exception.java,**/*SpringMain.class,**/*SpringMain.java \
-          -Dsonar.tests=src/test/java/ \
-          -Dsonar.java.source=11 \
-          -Dsonar.java.target=11 \
-          -Dsonar.java.binaries=build/classes/java/main/ \
-          -Dsonar.java.test.binaries=build/classes/java/test/ \
-          -Dsonar.junit.reportPaths=build/test-results/test/
+      - run: ./gradlew sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.branch.name=${{ env.BRANCH }} -Dsonar.project.version=${{ env.SHA}}
 
   push-image:
     runs-on: ubuntu-latest
