--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ plugins {
     id 'com.github.sherter.google-java-format' version '0.8'
     id 'jacoco'
     id 'application'
-//    id "org.jlleitschuh.gradle.ktlint"
+    id 'org.sonarqube' version '2.7'
+//    id 'org.jlleitschuh.gradle.ktlint'
 }
 
 group = 'com.lukeshay'
@@ -134,13 +135,12 @@ jacocoTestReport {
 
 compileJava {
     options.encoding = 'UTF-8'
-    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+    options.compilerArgs << '-Xlint:unchecked' << '-Xlint:deprecation'
 }
 
 compileTestJava {
     options.encoding = 'UTF-8'
-    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+    options.compilerArgs << '-Xlint:unchecked' << '-Xlint:deprecation'
 }
 
-check.dependsOn jacocoTestReport
-jacocoTestCoverageVerification.dependsOn test
+build.dependsOn jacocoTestCoverageVerification
