Improving test coverage .

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ systemProp.sonar.groovy.jacoco.reportPaths=build/reports/jacoco/test
 systemProp.sonar.projectKey=LukeShay_route-rating-rest-api
 systemProp.sonar.organization=luke-shay
 systemProp.sonar.sources=src/main/java/
-systemProp.sonar.exclusions=**/*Repository.class,**/*Repository.java,**/*Body.class,**/*Body.java,**/*View.class,**/*View.java,**/*Payload.class,**/*Payload.java,**/*Filter.class,**/*Filter.java,**/*Exception.class,**/*Exception.java,**/*SpringMain.class,**/*SpringMain.java
+systemProp.sonar.exclusions=**/*Repository.class,**/*Repository.java,**/*Body.class,**/*Body.java,**/*View.class,**/*View.java,**/*Payload.class,**/*Payload.java,**/*Filter.class,**/*Filter.java,**/*Exception.class,**/*Exception.java,**/*SpringMain.class,**/*SpringMain.java,**/config/*
 systemProp.sonar.tests=src/test/java/
 systemProp.sonar.java.source=11
 systemProp.sonar.java.target=11
