--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -34,7 +34,7 @@ jobs:
 
   push-image:
     runs-on: ubuntu-latest
-    needs: [build, lint, coverage]
+    needs: [build, coverage]
     env:
       DOCKER_REPO: lukeshaydocker/route-rating-rest-api
       SHA: ${GITHUB_SHA::7}
