--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ systemProp.sonar.junit.reportPaths=build/test-results/test/
 org.gradle.configureondemand=true
 org.gradle.daemon=true
 org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
