--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,6 @@ ij_wrap_on_typing = true
 
 [*.java]
 indent_style = tab
-ij_smart_tabs = true
 ij_java_align_consecutive_assignments = false
 ij_java_align_consecutive_variable_declarations = false
 ij_java_align_group_field_declarations = false
@@ -111,7 +110,7 @@ ij_java_for_statement_right_paren_on_new_line = false
 ij_java_for_statement_wrap = off
 ij_java_generate_final_locals = false
 ij_java_generate_final_parameters = false
-ij_java_if_brace_force = never
+ij_java_if_brace_force = true
 ij_java_imports_layout = *, |, javax.**, java.**, |, $*
 ij_java_indent_case_from_switch = true
 ij_java_insert_inner_class_imports = false
@@ -227,7 +226,7 @@ ij_java_spaces_around_unary_operator = false
 ij_java_spaces_within_angle_brackets = false
 ij_java_spaces_within_annotation_parentheses = false
 ij_java_spaces_within_array_initializer_braces = false
-ij_java_spaces_within_braces = false
+ij_java_spaces_within_braces = true
 ij_java_spaces_within_brackets = false
 ij_java_spaces_within_cast_parentheses = false
 ij_java_spaces_within_catch_parentheses = false
@@ -253,11 +252,11 @@ ij_java_use_relative_indents = false
 ij_java_use_single_class_imports = true
 ij_java_variable_annotation_wrap = off
 ij_java_visibility = public
-ij_java_while_brace_force = never
-ij_java_while_on_new_line = false
-ij_java_wrap_comments = false
+ij_java_while_brace_force = always
+ij_java_while_on_new_line = true
+ij_java_wrap_comments = true
 ij_java_wrap_first_method_in_call_chain = false
-ij_java_wrap_long_lines = false
+ij_java_wrap_long_lines = true
 
 [{*.gradle, *.groovy, *.gdsl, *.gy, *.gson, *.gant}]
 ij_groovy_align_group_field_declarations = false
