--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,9 @@ spring.datasource.platform=postgres
 spring.datasource.url=${REST_API_DB_URL}
 spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.main.allow-bean-definition-overriding=true
