--- a/.envrc
+++ b/.envrc
@@ -1,11 +1,11 @@
-export REST_API_JWT_SECRET="9tB0KJMNb3mozBUNnl7xRxqgKXFmDGDxOYMVGUnEF6zz52tI"
-export REST_API_REFRESH_SECRET="laqM1op7bwUCPxowHz35NK5xfhmYNLZLWE92whMqGbAdDwwa"
+export REST_API_JWT_SECRET="45H7Jjb5j140xpgBDKJ8zYkDdbqvy1zkVJgHed6I2DR7Vs51"
+export REST_API_REFRESH_SECRET="ZeHSEeXfwTLFvkoV8P1WaLs4Wu0ESZCoF4WVCRBylU3LWM2V"
 
-export DIGITAL_OCEAN_ACCESS_KEY="THIS_IS_OBV_FAKE"
-export DIGITAL_OCEAN_SECRET_KEY="THIS_IS_OBV_FAKE_ALSO"
+export DIGITAL_OCEAN_ACCESS_KEY="PJ4VEIIB76ERGWTMK5YU"
+export DIGITAL_OCEAN_SECRET_KEY="+5rS+mZkE/8FqFxceakABwcKVwXQnwLWOTcQSJ91q18"
 
-export GOOGLE_RECAPTCHA_TOKEN="CxGMwjc1HIN2XwXsp73A51go3MyrQurkFpJVl9es"
+export GOOGLE_RECAPTCHA_TOKEN="6Le5a9gUAAAAAKVKz_gV4sQEaWkwH6N5Oykosp9N"
 
 export REST_API_DB_USERNAME="postgres"
-export REST_API_DB_PASSWORD="password"
-export REST_API_DB_URL="jdbc:postgresql://localhost:5432/routerating"
+export REST_API_DB_PASSWORD="39AJ}D-YpH\`gG^j,Y5t^"
+export REST_API_DB_URL="jdbc:postgresql://rest-api-prod.cr3ycyqjzywv.us-east-2.rds.amazonaws.com/routerating"
