--- a/deploy/Dockerfile.lambda
+++ b/deploy/Dockerfile.lambda
@@ -10,6 +10,8 @@ COPY gradlew ./gradlew
 
 RUN ./gradlew --build-cache --no-daemon
 
+ADD "https://www.random.org/cgi-bin/randbyte?nbytes=10&format=h" skipcache
+
 COPY src ./src
 COPY build.gradle ./build.gradle
 COPY gradle.properties ./gradle.properties
