--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -54,6 +54,11 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: [build, coverage]
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: us-east-2
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -63,17 +68,9 @@ jobs:
           architecture: x64 # (x64 or x86) - defaults to x64
       - run: docker build -f deploy/Dockerfile.lambda -t rest-api-lambda .
       - run: docker run -v "${PWD}"/build:/app/build rest-api-lambda
-        uses: youyo/aws-sam-action/python3.8@master
+      - uses: youyo/aws-sam-action/python3.8@master
         with:
           sam_command:'package --s3-bucket route-rating-rest-api-builds -s3-prefix latest --output-template-file output.yml' 
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-2
-        uses: youyo/aws-sam-action/python3.8@master
+      - uses: youyo/aws-sam-action/python3.8@master
         with:
           sam_command:'deploy --s3-bucket route-rating-rest-api-builds --template-file output.yml --region us-east-2 --no-confirm-changeset --stack-name route-rating-rest-api --capabilities CAPABILITY_IAM' 
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-2
