--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-do.key.secret=${DIGITAL_OCEAN_SECRET_KEY}
-do.key.access=${DIGITAL_OCEAN_ACCESS_KEY}
+do.key.secret=${DIGITAL_OCEAN_SECRET_KEY:=asdf}
+do.key.access=${DIGITAL_OCEAN_ACCESS_KEY:=asdf}
 file.bucket.name=route-rating
 file.bucket.url=nyc3.digitaloceanspaces.com
-google.recaptcha.token=${GOOGLE_RECAPTCHA_TOKEN}
+google.recaptcha.token=${GOOGLE_RECAPTCHA_TOKEN:=asdf}
 logging.file.name=restapi.log
 logging.file.path=/tmp
 logging.level.com.lukeshay=DEBUG
