--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -12,6 +12,14 @@ jobs:
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
       - run: ./gradlew build
+      - uses: actions/upload-artifact@v1
+        with:
+          name: rest-api.jar 
+          path: rest-api.jar
+      - uses: actions/upload-artifact@v1
+        with:
+          name: build
+          path: build
 
   coverage:
     runs-on: ubuntu-latest
@@ -26,9 +34,10 @@ jobs:
           java-version: '11.0.5' # The JDK version to make available on the path.
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
-      - uses: warchant/setup-sonar-scanner@v1
+      - uses: actions/download-artifact@v1
         with:
-          version: 4.3.0.2102
+          name: build
+          path: build
       - run: ./gradlew sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.branch.name=${{ env.BRANCH }} -Dsonar.project.version=${{ env.SHA}}
 
 
@@ -40,13 +49,10 @@ jobs:
       SHA: ${GITHUB_SHA::7}
       BRANCH: ${GITHUB_REF}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/download-artifact@v1
         with:
-          java-version: '11.0.5' # The JDK version to make available on the path.
-          java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
-          architecture: x64 # (x64 or x86) - defaults to x64
-      - run: ./scripts/build.sh
+          name: rest-api.jar
+          path: rest-api.jar
       - run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
       - run: docker build -t ${{ env.DOCKER_REPO }}:${{ env.SHA }} -t ${{ env.DOCKER_REPO }}:latest -f deploy/Dockerfile .
       - run: docker push ${{ env.DOCKER_REPO }}:${{ env.SHA }}
@@ -65,7 +71,5 @@ jobs:
       - run: docker run -v "${PWD}"/build:/app/build rest-api-lambda
       - uses: youyo/aws-sam-action/python3.8@master
         with:
-          sam_command: 'package --s3-bucket route-rating-rest-api-builds -s3-prefix latest --output-template-file output.yml' 
-      - uses: youyo/aws-sam-action/python3.8@master
-        with:
+          sam_command: 'package --s3-bucket route-rating-rest-api-builds --s3-prefix latest --output-template-file output.yml' 
           sam_command: 'deploy --s3-bucket route-rating-rest-api-builds --template-file output.yml --region us-east-2 --no-confirm-changeset --stack-name route-rating-rest-api --capabilities CAPABILITY_IAM' 
