--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -4,7 +4,7 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: build-artifacts
+    name: Build
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -31,10 +31,6 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '11.0.6'
-      - uses: actions/download-artifact@v1
-        with:
-          name: build-artifacts
-          path: build
       - run: ./gradlew sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.branch.name=${{ env.BRANCH }} -Dsonar.project.version=${{ env.SHA}}
   push-image:
     runs-on: ubuntu-latest
