--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -13,10 +13,6 @@ jobs:
       - run: ./scripts/build.sh
       - uses: actions/upload-artifact@v1
         with:
-          name: rest-api.jar 
-          path: rest-api.jar
-      - uses: actions/upload-artifact@v1
-        with:
           name: build-artifacts
           path: build
   coverage:
@@ -41,10 +37,10 @@ jobs:
       BRANCH: ${GITHUB_REF}
     name: Docker image
     steps:
-      - uses: actions/download-artifact@v1
+      - uses: actions/setup-java@v1
         with:
-          name: rest-api.jar
-          path: rest-api.jar
+          java-version: '11.0.6'
+      - run: ./scripts/build.sh
       - run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
       - run: docker build -t ${{ env.DOCKER_REPO }}:${{ env.SHA }} -t ${{ env.DOCKER_REPO }}:latest -f deploy/Dockerfile .
       - run: docker push ${{ env.DOCKER_REPO }}:${{ env.SHA }}
