--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -13,6 +13,10 @@ jobs:
       - run: ./scripts/build.sh
       - uses: actions/upload-artifact@v1
         with:
+          name: rest-api.jar 
+          path: rest-api.jar
+      - uses: actions/upload-artifact@v1
+        with:
           name: build-artifacts
           path: build
   coverage:
@@ -27,6 +31,10 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '11.0.6'
+      - uses: actions/download-artifact@v1
+        with:
+          name: build-artifacts
+          path: build
       - run: ./gradlew sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.branch.name=${{ env.BRANCH }} -Dsonar.project.version=${{ env.SHA}}
   push-image:
     runs-on: ubuntu-latest
@@ -37,10 +45,11 @@ jobs:
       BRANCH: ${GITHUB_REF}
     name: Docker image
     steps:
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v1
         with:
-          java-version: '11.0.6'
-      - run: ./scripts/build.sh
+          name: rest-api.jar
+          path: rest-api.jar
       - run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
       - run: docker build -t ${{ env.DOCKER_REPO }}:${{ env.SHA }} -t ${{ env.DOCKER_REPO }}:latest -f deploy/Dockerfile .
       - run: docker push ${{ env.DOCKER_REPO }}:${{ env.SHA }}
