--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -21,6 +21,7 @@ jobs:
           path: build
   coverage:
     runs-on: ubuntu-latest
+    needs: [build]
     env:
       BRANCH: ${GITHUB_REF:11}
       PROJECT_KEY: LukeShay_route-rating-rest-api
