--- a/template.yml
+++ b/template.yml
@@ -7,7 +7,6 @@ Metadata:
     Name: rest-api
     Description: Rest API for Route Rating.
     Author: Luke Shay
-    LicenseUrl: LICENSE
     ReadmeUrl: README.md
     HomePageUrl: https://lukeshay.com
     SemanticVersion: 0.0.1
@@ -34,6 +33,6 @@ Resources:
 Outputs:
   RestApi:
     Description: URL for application
-    Value: !Sub 'https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/api'
+    Value: !Sub 'https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod'
     Export:
       Name: RestApi
