--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -4,21 +4,18 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build
+    needs: [build]
+    env:
+      DOCKER_REPO: lukeshaydocker/route-rating-rest-api
+      SHA: ${GITHUB_SHA::7}
+    name: Docker image
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '11.0.6'
-      - run: ./scripts/build.sh
-      - uses: actions/upload-artifact@v1
-        with:
-          name: rest-api.jar
-          path: rest-api.jar
-      - uses: actions/upload-artifact@v1
-        with:
-          name: build-artifacts
-          path: build
+      - run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
+      - run: docker build -t ${{ env.DOCKER_REPO }}:${{ env.SHA }} -t ${{ env.DOCKER_REPO }}:latest -f deploy/Dockerfile .
+      - run: docker push ${{ env.DOCKER_REPO }}:${{ env.SHA }}
+      if: github.ref == 'refs/heads/master'
+      - run: docker push ${{ env.DOCKER_REPO }}:latest || echo "Not pushing latest because on branch"
   coverage:
     runs-on: ubuntu-latest
     needs: [build]
@@ -32,29 +29,7 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '11.0.6'
-      - uses: actions/download-artifact@v1
-        with:
-          name: build-artifacts
-          path: build
       - run: ./gradlew sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.branch.name=${{ env.BRANCH }} -Dsonar.project.version=${{ env.SHA}}
-  push-image:
-    runs-on: ubuntu-latest
-    needs: [build]
-    env:
-      DOCKER_REPO: lukeshaydocker/route-rating-rest-api
-      SHA: ${GITHUB_SHA::7}
-      BRANCH: ${GITHUB_REF}
-    name: Docker image
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/download-artifact@v1
-        with:
-          name: rest-api.jar
-          path: rest-api.jar
-      - run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
-      - run: docker build -t ${{ env.DOCKER_REPO }}:${{ env.SHA }} -t ${{ env.DOCKER_REPO }}:latest -f deploy/Dockerfile .
-      - run: docker push ${{ env.DOCKER_REPO }}:${{ env.SHA }}
-      - run: test `echo ${{ env.BRANCH }} | grep "master"` && docker push ${{ env.DOCKER_REPO }}:latest || echo "Not pushing latest because on branch"
   deploy:
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
