--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -4,18 +4,24 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      DOCKER_REPO: lukeshaydocker/route-rating-rest-api
-      SHA: ${GITHUB_SHA::7}
     name: Build
     steps:
       - uses: actions/checkout@v2
-      - run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
-      - run: docker build -t ${{ env.DOCKER_REPO }}:${{ env.SHA }} -t ${{ env.DOCKER_REPO }}:latest -v build:/app/build -f deploy/Dockerfile .
-      - run: docker push ${{ env.DOCKER_REPO }}:${{ env.SHA }}
-      - run: test `echo ${{ github.ref }} | grep "master"` && docker push ${{ env.DOCKER_REPO }}:latest || echo "Not pushing latest because on branch"
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '11.0.6'
+      - run: ./scripts/build.sh
+      - uses: actions/upload-artifact@v1
+        with:
+          name: rest-api.jar
+          path: rest-api.jar
+      - uses: actions/upload-artifact@v1
+        with:
+          name: build-artifacts
+          path: build
   coverage:
     runs-on: ubuntu-latest
+    needs: [build]
     env:
       BRANCH: ${GITHUB_REF:11}
       PROJECT_KEY: LukeShay_route-rating-rest-api
@@ -26,7 +32,24 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '11.0.6'
+      - uses: actions/download-artifact@v1
+        with:
+          name: build-artifacts
+          path: build
       - run: ./gradlew sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.branch.name=${{ env.BRANCH }} -Dsonar.project.version=${{ env.SHA}}
+  push-image:
+    runs-on: ubuntu-latest
+    env:
+      DOCKER_REPO: lukeshaydocker/route-rating-rest-api
+      SHA: ${GITHUB_SHA::7}
+      BRANCH: ${GITHUB_REF}
+    name: Docker image
+    steps:
+      - uses: actions/checkout@v2
+      - run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
+      - run: docker build -t ${{ env.DOCKER_REPO }}:${{ env.SHA }} -t ${{ env.DOCKER_REPO }}:latest -f deploy/Dockerfile .
+      - run: docker push ${{ env.DOCKER_REPO }}:${{ env.SHA }}
+      - run: test `echo ${{ env.BRANCH }} | grep "master"` && docker push ${{ env.DOCKER_REPO }}:latest || echo "Not pushing latest because on branch"
   deploy:
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
@@ -38,10 +61,10 @@ jobs:
     name: Lambda deploy
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-      with:
-        java-version: '11.0.6'
-      - run: ./scripts/build.sh
+      - uses: actions/download-artifact@v1
+        with:
+          name: build-artifacts
+          path: build
       - uses: youyo/aws-sam-action/python3.8@master
         with:
           sam_command: 'package --s3-bucket route-rating-rest-api-builds --s3-prefix latest --output-template-file output.yml'
