--- a/deploy/docker-compose.dev.yml
+++ b/deploy/docker-compose.dev.yml
@@ -9,20 +9,19 @@ services:
       - 5000:8080
     working_dir: /app
     environment:
-      - JWT_SECRET=$JWT_SECRET
-      - REFRESH_SECRET=$REFRESH_SECRET
-      - ACCESS_KEY=$ACCESS_KEY
-      - SECRET_KEY=$SECRET_KEY
+      - REST_API_JWT_SECRET=REST_API_JWT_SECRET
+      - REST_API_REFRESH_SECRET=REST_API_REFRESH_SECRET
+      - DIGITAL_OCEAN_ACCESS_KEY=DIGITAL_OCEAN_ACCESS_KEY
+      - DIGITAL_OCEAN_SECRET_KEY=DIGITAL_OCEAN_SECRET_KEY
       - GOOGLE_RECAPTCHA_TOKEN=$GOOGLE_RECAPTCHA_TOKEN
-      - DB_URL=jdbc:postgresql://localhost:5432/routerating
-      - DB_USERNAME=postgres
-      - DB_PASSWORD=password
+      - REST_API_DB_URL=jdbc:postgresql://postgres:5432/routerating
+      - REST_API_DB_PASSWORD=password
     depends_on:
-      - sqldb
+      - postgres
     links:
-      - sqldb
+      - postgres
 
-  sqldb:
+  postgres:
     image: postgres
     container_name: rest-api-postgres
     environment:
@@ -32,4 +31,4 @@ services:
     volumes:
       - ./db-data:/var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - 5433:5432
